--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>pl.airq</groupId>
     <artifactId>parent-pom</artifactId>
@@ -22,11 +23,10 @@
     </properties>
 
     <scm>
+        <developerConnection>scm:git:https://github.com/cssrumi/airq-parent-pom.git</developerConnection>
         <connection>scm:git:https://github.com/cssrumi/airq-parent-pom.git</connection>
         <url>https://github.com/cssrumi/airq-parent-pom.git</url>
-        <developerConnection>scm:git:https://github.com/cssrumi/airq-parent-pom.git</developerConnection>
-      <tag>parent-pom-1.0</tag>
-  </scm>
+    </scm>
 
     <dependencyManagement>
         <dependencies>
@@ -74,6 +74,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>${release-plugin.version}</version>
+                <configuration>
+                    <tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>
+                </configuration>
             </plugin>
         </plugins>
     </build>
