--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>pl.airq</groupId>
     <artifactId>parent-pom</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -26,7 +25,8 @@
         <developerConnection>scm:git:https://github.com/cssrumi/airq-parent-pom.git</developerConnection>
         <connection>scm:git:https://github.com/cssrumi/airq-parent-pom.git</connection>
         <url>https://github.com/cssrumi/airq-parent-pom.git</url>
-    </scm>
+      <tag>parent-pom-1.1</tag>
+  </scm>
 
     <dependencyManagement>
         <dependencies>
