--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>pl.airq</groupId>
     <artifactId>parent-pom</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -25,7 +25,7 @@
         <developerConnection>scm:git:https://github.com/cssrumi/airq-parent-pom.git</developerConnection>
         <connection>scm:git:https://github.com/cssrumi/airq-parent-pom.git</connection>
         <url>https://github.com/cssrumi/airq-parent-pom.git</url>
-      <tag>HEAD</tag>
+      <tag>parent-pom-1.2</tag>
   </scm>
 
     <dependencyManagement>
