quarkus updated to 1.12.2

--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,14 @@
         <maven.compiler.parameters>true</maven.compiler.parameters>
         <quarkus.platform.artifact-id>quarkus-universe-bom</quarkus.platform.artifact-id>
         <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
-        <quarkus-plugin.version>1.9.2.Final</quarkus-plugin.version>
-        <quarkus.platform.version>1.9.2.Final</quarkus.platform.version>
-        <surefire-plugin.version>2.22.1</surefire-plugin.version>
+        <quarkus-plugin.version>1.12.2.Final</quarkus-plugin.version>
+        <quarkus.platform.version>1.12.2.Final</quarkus.platform.version>
+        <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
         <compiler-plugin.version>3.8.1</compiler-plugin.version>
         <!-- custom properties -->
         <release-plugin.version>3.0.0-M1</release-plugin.version>
-        <testcontainers.version>1.15.0-rc2</testcontainers.version>
-        <guava.version>30.0-jre</guava.version>
+        <testcontainers.version>1.15.2</testcontainers.version>
+        <guava.version>30.1-jre</guava.version>
         <kafka-clients.version>2.6.0</kafka-clients.version>
         <commons-collections4.version>4.4</commons-collections4.version>
     </properties>
@@ -158,6 +158,7 @@
             </build>
             <properties>
                 <quarkus.package.type>native</quarkus.package.type>
+                <quarkus.native.additional-build-args>--allow-incomplete-classpath</quarkus.native.additional-build-args>
             </properties>
         </profile>
     </profiles>
