--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>pl.airq</groupId>
     <artifactId>parent-pom</artifactId>
-    <version>1.6-SNAPSHOT</version>
+    <version>1.5.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -21,7 +21,7 @@
         <!-- custom properties -->
         <release-plugin.version>3.0.0-M1</release-plugin.version>
         <testcontainers.version>1.15.2</testcontainers.version>
-        <guava.version>30.1-jre</guava.version>
+        <guava.version>30.1.1-jre</guava.version>
         <kafka-clients.version>2.6.0</kafka-clients.version>
         <commons-collections4.version>4.4</commons-collections4.version>
     </properties>
@@ -158,7 +158,7 @@
             </build>
             <properties>
                 <quarkus.package.type>native</quarkus.package.type>
-                <quarkus.native.additional-build-args>--allow-incomplete-classpath</quarkus.native.additional-build-args>
+<!--                <quarkus.native.additional-build-args>&#45;&#45;allow-incomplete-classpath</quarkus.native.additional-build-args>-->
             </properties>
         </profile>
     </profiles>
